--- a/project/modules/layouts/main/sass/styles.scss
+++ b/project/modules/layouts/main/sass/styles.scss
@@ -1,5 +1,6 @@
 main {
-  display: flow-root;
-  height: 100%;
-  width: 100%;
+	display: flow-root;
+	height: 100%;
+	width: 100%;
+	background: red;
 }
